Add require tightenco/collect and file Runner.php

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "name": "artem6367/hexlet-php",
     "type": "project",
-    "require": {}
+    "require": {
+        "tightenco/collect": "^8.83"
+    }
 }
