--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,18 @@
 {
     "name": "artem6367/hexlet-php",
     "type": "project",
+    "autoload": {
+        "files": [
+            "src/Runner.php"
+        ]
+    },
+    "scripts": {
+        "phpcs": "phpcs"
+    },
     "require": {
         "tightenco/collect": "^8.83"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.8"
     }
 }
